# pylandstats

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  Untitled.ipynb  environment-dev.yml  environment.yml  meson.build  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATES/: bug.md
.github/workflows/: dev.yml  doc.yml  release.yml  release_to_pypi.yml  tests.yml
docs/: Makefile  conf.py  dev-install.md  environment.yml  index.rst  landscape.rst  make.bat  spatial-signature-analysis.rst  spatiotemporal-buffer.rst  spatiotemporal-zonal.rst  spatiotemporal.rst  zonal.rst
docs/src/: conf.py  gradient.rst  index.rst  landscape.rst  pylandstats.rst  spatiotemporal-buffer.rst  spatiotemporal.rst  zonal.rst
pylandstats/: __init__.py  adjacency.pyx  compute.py  compute.pythran  gradient.py  landscape.py  meson.build  metric_utils.py  multilandscape.py  settings.py  spatial_signature.py  spatiotemporal.py  zonal.py
src/pylandstats/: landscape.py  spatiotemporal.py
tests/: __init__.py  test_pylandstats.py
tests/data/: gmb-lausanne.gpkg  label_arr.npy  ls100_06.tif  ls100_12.tif  ls250_06.tif  ls250_12.tif  masks_arr.npy
tests/input-data/: ls250_12.npy
tests/input_data/: ls.npy  ls.tif  ls100_06.npy  ls100_06.tif  ls100_12.npy  ls100_12.tif  ls250_06.npy  ls250_06.tif  ls250_12.npy  ls250_12.tif  ls_future.npy  masks_arr.npy
tests/input_data/gmb-lausanne/: gmb-lausanne.dbf  gmb-lausanne.shp  gmb-lausanne.shx
