[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[flake8]
exclude =
    build
    pylandstats/__pythran__    
per-file-ignores =
    pylandstats/__init__.py:F401,F403
    pylandstats/landscape.py:F821,W605
    tests/test_pylandstats.py:F401    

[yapf]
based_on_style = pep8
split_before_named_assigns = false

[isort]
known_first_party = pylandstats
default_section = THIRDPARTY
forced_separate = test_pylandstats, pythran
