[bdist_wheel]
universal=1

[metadata]
description-file=README.md

[flake8]
docstring-convention = numpy
max-line-length = 88
extend-ignore = E203
exclude =
    build
    pylandstats/__pythran__    
per-file-ignores =
    pylandstats/__init__.py:F401,F403
    pylandstats/landscape.py:F821,D401
    tests/test_pylandstats.py:D101,D102,F401

[isort]
known_first_party = pylandstats
default_section = THIRDPARTY
forced_separate = test_pylandstats, pythran
